--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,8 +64,17 @@ jobs:
         run: bundle exec brakeman -z -q
       - name: bundle audit
         run: bundle exec bundle audit check --update
-      # - name: Debug
-      #   uses: mxschmitt/action-tmate@v3
-      #   timeout-minutes: 15
-      - name: rails test
-        run: bin/rails db:create && bin/rails db:migrate && bin/rails test
+      - name: Rails db:create
+        run: bin/rails db:create
+      - name: Rails db:migrate
+        run: bin/rails db:migrate
+      - name: Do tests without System Test
+        run: bin/rails test
+      - name: Check Application Boot
+        run: bundle exec rails runner "puts ActiveRecord::Base.connection.active?"
+#      - name: ERB Lint
+#      - name System tests
+#      - name: Run Code Climate
+    # - name: Debug
+    #   uses: mxschmitt/action-tmate@v3
+    #   timeout-minutes: 15
