[STUDY] rethinking of /etc/hosts and .localdomain

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ POSTGRESQL_DOCS_PUB='psql-pub'
 POSTGRESQL_DOCS_SUB='psql-sub'
 VALKEY_CACHE_URL='redis://vk-cache:6379'
 VALKEY_SESSION_URL='redis://vk-session:6379'
-API_CORPORATE_URL='localhost.localdomain'
-API_SERVICE_URL='localhost4.localdomain'
-API_STAFF_URL='localhost6.localdomain'
+API_CORPORATE_URL='com.jit.localdomain'
+API_SERVICE_URL='net.jit.localdomain'
+API_STAFF_URL='org.jit.localdomain'
 STAGING='b375405' # A parameter for the staging environment. I want to include the parameters used when committing.
 #SELENIUM_REMOTE_URL='chromium:4444'
