--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,3 +90,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+  rubocop:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [ci]
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Brakeman
+        run: bundle exec brakeman -z -q
