--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,3 +110,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+  erb-lint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [ci]
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
