--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  ci:
+  setup:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     defaults:
@@ -58,10 +58,6 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-      - name: Rubocop
-        run: bin/rubocop --fail-fast
-      - name: bundle audit
-        run: bundle exec bundle audit check --update
       - name: Rails db:create
         run: bin/rails db:create
       - name: Rails db:migrate
@@ -70,8 +66,6 @@ jobs:
         run: bin/rails test
       - name: Check Application Boot
         run: bundle exec rails runner "puts ActiveRecord::Base.connection.active?"
-      - name: Check ERB
-        run: bundle exec erb_lint --lint-all
 #      - name System tests
 #      - name: Run Code Climate
 #      - name: type check
@@ -81,7 +75,7 @@ jobs:
   brakeman:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [ci]
+    needs: [setup]
     defaults:
       run:
         shell: bash
@@ -96,7 +90,7 @@ jobs:
   rubocop:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [ci]
+    needs: [setup]
     defaults:
       run:
         shell: bash
@@ -112,20 +106,32 @@ jobs:
   bundle-audit:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [ci]
+    needs: [setup]
     defaults:
       run:
         shell: bash
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+      - name: bundle audit
+        run: bundle exec bundle audit check --update
   erb-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [ci]
+    needs: [setup]
     defaults:
       run:
         shell: bash
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: .ruby-version
+          bundler-cache: true
+      - name: Check ERB
+        run: bundle exec erb_lint --lint-all
