--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -10,7 +10,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-
+permissions:
+  contents: read # リポジトリのコンテンツを読み取る権限
+  issues: write # Issueを書き込む権限
+  
 # delete develop
 jobs:
   build-and-push:
