[INCREMENTAL] refactoring github actions code.(2)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
         options: >-
           --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
         ports:
-          - 6379:6379
+          - 6380:6379
       postgres:
         image: postgres
         env:
@@ -36,10 +36,16 @@ jobs:
         options: >-
           --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         ports:
-          - 5432:5432
+          - 5433:5432
     env:
       POSTGRES_USER: 'default'
       POSTGRES_PASSWORD: 'password'
+      POSTGRESQL_AUTH_PUB: 'localhost'
+      POSTGRESQL_AUTH_SUB: 'localhost'
+      POSTGRESQL_DOCS_PUB: 'localhost'
+      POSTGRESQL_DOCS_SUB: 'localhost'
+      POSTGRESQL_CORE_PUB: 'localhost'
+      POSTGRESQL_CORE_SUB: 'localhost'
       VALKEY_CACHE_URL: 'redis://localhost:6379/0'
       VALKEY_SESSION_URL: 'redis://localhost:6379/1'
     steps:
