[UPDATE] [200~implemented tests which check redis liveness]

--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ POSTGRESQL_CORE_PUB='psql-pub'
 POSTGRESQL_CORE_SUB='psql-sub'
 POSTGRESQL_DOCS_PUB='psql-pub'
 POSTGRESQL_DOCS_SUB='psql-sub'
-VALKEY_CACHE_URL='redis://vk-cache:6379'
-VALKEY_SESSION_URL='redis://vk-session:6379'
+REDIS_CACHE_URL='redis://vk-cache:6379/0'
+REDIS_SESSION_URL='redis://vk-session:6379/0'
 API_CORPORATE_URL='com.jit.localdomain'
 API_SERVICE_URL='net.jit.localdomain'
 API_STAFF_URL='org.jit.localdomain'
