--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -141,8 +141,8 @@ jobs:
       POSTGRESQL_DOCS_SUB: 'localhost'
       POSTGRESQL_CORE_PUB: 'localhost'
       POSTGRESQL_CORE_SUB: 'localhost'
-      VALKEY_CACHE_URL: 'redis://localhost:6379/0'
-      VALKEY_SESSION_URL: 'redis://localhost:6379/1'
+      REDIS_CACHE_URL: 'redis://localhost:6379/0'
+      REDIS_SESSION_URL: 'redis://localhost:6379/1'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
