--- a/compose.yml
+++ b/compose.yml
@@ -111,6 +111,8 @@ services:
     build:
       context: ./
       target: development
+      args:
+        COMMIT_HASH: 'abcdef'
     command: bin/rails server -p 3000 -b 0.0.0.0
     restart: always
     user: "1000:1000"
