[UPDATE] You'll be able to view the hash ID while the code is running in staging. (re 2)

--- a/.github/workflows/push-to-aws-ecr.yaml
+++ b/.github/workflows/push-to-aws-ecr.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - develop # delete this line
+#      - develop # delete this line
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
