--- a/compose.yml
+++ b/compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - psql-pub-volume:/var/lib/postgresql/data
+#      - psql-pub-volume:/var/lib/postgresql/data
       - ./docker/psql-pub/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./docker/psql-pub/pg_hba.conf:/etc/postgresql/pg_hba.conf
   psql-sub:
@@ -30,7 +30,7 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - psql-sub-volume:/var/lib/postgresql/data
+#      - psql-sub-volume:/var/lib/postgresql/data
       - ./docker/psql-sub/init.sh:/docker-entrypoint-initdb.d/init.sh
     depends_on:
       - psql-pub
