--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -146,7 +146,7 @@ jobs:
   teardown:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [brakeman, rubocop, bundle-audit,erb-lint,bootable,tests]
+    needs: [brakeman, rubocop, bundle-audit,bootable,tests]
     defaults:
       run:
         shell: bash
