[?] I added helper methods, but I\'m not sure how to test them.

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ POSTGRESQL_DOCS_PUB='psql-pub'
 POSTGRESQL_DOCS_SUB='psql-sub'
 REDIS_CACHE_URL='redis://vk-cache:6379/0'
 REDIS_SESSION_URL='redis://vk-session:6379/0'
-API_CORPORATE_URL='com.jit.localdomain'
-API_SERVICE_URL='net.jit.localdomain'
-API_STAFF_URL='org.jit.localdomain'
+API_CORPORATE_URL='com.www.localdomain'
+API_SERVICE_URL='net.www.localdomain'
+API_STAFF_URL='org.www.localdomain'
 #SELENIUM_REMOTE_URL='chromium:4444'
