--- a/compose.yml
+++ b/compose.yml
@@ -128,6 +128,11 @@ services:
       - vk-cache
       - vk-session
       - minio
+  varnish:
+    image: varnish:7
+    restart: always # コンテナが停止すると常に再起動
+    depends_on:
+      - ror
   chromium:
     image: seleniarm/standalone-chromium
     restart: always # コンテナが停止すると常に再起動
